Update hero copy

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ description: Nail Salon based in Wallasey Village
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">The last sales CRM <strong>you'll ever need</strong></h1>
-		<p class="subtext editable">Track and optimize your sales team in real time.</p>
+		<h1 class="editable">Give your nails <strong>the VIP treatment</strong></h1>
+		<p class="subtext editable">The hottest nails in Wallasey</p>
 		<div class="cta button alt"><a href="/sign-up/">Book online now</a></div>
 		<div>
 			<img src="/images/photo.png" alt="Screenshot" class="editable" />
