--- a/about.html
+++ b/about.html
@@ -1,7 +1,10 @@
 ---
 title: Our team
-description: We've built an amazing team of developers, marketers, designers and sales people.
+description: >-
+  We've built an amazing, fantastic team of developers, marketers, designers and
+  sales people.
 ---
+
 <p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_staff_members/" class="btn"><strong>&#9998;</strong> Manage Staff members</a></p>
 <ul class="staff">
 	{% for person in site.staff_members %}
