ADD link to slack

--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@ description: Using our Maker skills against Corona, for the people
 				</p>
 				<br>
 				<div class="button">
-					<a style="background: {{ plan.color }}" href="">Join Our Slack Workspace</a>
+					<a style="background: {{ plan.color }}"
+					href="https://join.slack.com/t/makervsvirus/shared_invite/zt-d0jrseye-16B4eZm1lkX~Hi8V7zFbiw" target="_blank">
+					Join Our Slack Workspace</a>
 				</div>
 			</div>
 		</div>
