FIX slack link for mobile devices

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ description: Using our Maker skills against Corona, for the people
 				<div class="button">
 					<a style="background: {{ plan.color }}"
 					href="https://join.slack.com/t/makervsvirus/shared_invite/zt-d0jrseye-16B4eZm1lkX~Hi8V7zFbiw" target="_blank">
-					Join Our Slack Workspace</a>
+					Join Slack</a>
 				</div>
 			</div>
 		</div>
