--- a/index.html
+++ b/index.html
@@ -124,4 +124,20 @@ description: Using our Maker skills against Corona, for the people
 			</div>
 		</div>
 	</section>
+	
+		<section>
+		<div class="container flex">
+			<div class="text editable">
+				<h2>List of protective equipment</h2>
+				<ul>
+					{% for hub in site.data.equipments %}
+						<li><a href="{{equipments.link}}" target="_blank">{{equipments.name}}</a></li>
+					{% endfor %}
+				</ul>
+				<p>
+					The list is not complete. Please send us the missing links.
+				</p>
+			</div>
+		</div>
+	</section>
 </div>
