ADD twitter hashtag

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@ description: Using our Maker skills against Corona, for the people
 			<strong>Please note: </strong> We only list initiatives that offer
 			their (self) produced items for free or at cost price.
 		</p>
+		<br>
+		<br>
+		<strong><a target="_blank" href="https://twitter.com/search?q=%23makervsvirus" class="hero">#makervsvirus</a></strong>
 		<!--<div class="cta button alt"><a href="{{ site.baseurl }}/sign-up/">Get Started Free blub</a></div>
 		<div>
 			<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
