ADD manual foil cutting

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ description: Using our Maker skills against Corona, for the people
 				<p>We're looking for people who:</p>
 				<ul>
 					<li>make 3D prints</li>
-					<li>have a laser cutter available</li>
+					<li>have a laser cutter available (or want to cut foil manually)</li>
 					<li>want to help with logistics</li>
 					<li>want to help with the organization</li>
 				</ul>
