UPDATE send links text

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ description: Using our Maker skills against Corona, for the people
 					{% endfor %}
 				</ul>
 				<p>
-					The list is not complete. Please send us the missing links.
+					The list is not complete. Please send us the missing links in our Slack workspace above.
 				</p>
 			</div>
 		</div>
@@ -154,7 +154,7 @@ description: Using our Maker skills against Corona, for the people
 					{% endfor %}
 				</ul>
 				<p>
-					The list is not complete. Please send us the missing links.
+					The list is not complete. Please send us the missing links in our Slack workspace above.
 				</p>
 			</div>
 		</div>
