ADD multi lang (WIP)

--- a/imprint/index.html
+++ b/imprint/index.html
@@ -1,27 +1,44 @@
 ---
-title: Imprint
-description: 
+title: Impressum / Imprint
+description:
 ---
 <div class="content">
 	<section>
 		<div class="container flex">
 			<div class="text editable">
+				<p>(English version below)</p>
         <h2>Gesetzliche Anbieterkennung</h2>
-      <p>
-        <b>Hammertime Kassel gUG (haftungsbeschränkt)</b><br>
-        <b>Franz-Ulrich-Straße 16</b><br>
-        <b>34117 Kassel</b><br>
-        <b>Deutschland</b>
-      </p>
-      <p>
-        Geschäftsführer: Melania-Simona Moise, Thorben Egberts<br>
-        Tel.: +49 176 3475 4338<br>
-        Email: hello@htks.de<br>
-      </p>
-      <h2>Rechtliche Hinweise zur Webseite</h2>
-      <p>Alle Texte, Bilder und weiter hier veröffentlichten Informationen unterliegen dem Urheberrecht des Anbieters, soweit nicht Urheberrechte Dritter bestehen. In jedem Fall ist eine Vervielfältigung, Verbreitung oder öffentliche Wiedergabe ausschließlich im Falle einer widerruflichen und nicht übertragbaren Zustimmung des Anbieters gestattet.</p>
-      <p>Für alle mittels Querverweis (Link) verbundenen Webinhalte übernimmt der Anbieter keine Verantwortung, da es sich hierbei nicht um eigene Inhalte handelt. Die verlinkten Seiten wurden auf rechtswidrige Inhalte überprüft, zum Zeitpunkt der Verlinkung waren solche nicht erkennbar. Verantwortlich für den Inhalt der verlinkten Seiten ist deren Betreiber. Der Anbieter hat hierzu keine allgemeine Überwachungs- und Prüfungspflicht. Bei Bekanntwerden einer Rechtsverletzung wird der entsprechende Link jedoch umgehend entfernt.</p>
-      </div>
+	      <p>
+	        <b>Hammertime Kassel gUG (haftungsbeschränkt)</b><br>
+	        <b>Franz-Ulrich-Straße 16</b><br>
+	        <b>34117 Kassel</b><br>
+	        <b>Deutschland</b>
+	      </p>
+	      <p>
+	        Geschäftsführer: Melania-Simona Moise, Thorben Egberts<br>
+	        Tel.: +49 176 3475 4338<br>
+	        Email: hello@htks.de<br>
+	      </p>
+	      <h2>Rechtliche Hinweise zur Webseite</h2>
+	      <p>Alle Texte, Bilder und weiter hier veröffentlichten Informationen unterliegen dem Urheberrecht des Anbieters, soweit nicht Urheberrechte Dritter bestehen. In jedem Fall ist eine Vervielfältigung, Verbreitung oder öffentliche Wiedergabe ausschließlich im Falle einer widerruflichen und nicht übertragbaren Zustimmung des Anbieters gestattet.</p>
+	      <p>Für alle mittels Querverweis (Link) verbundenen Webinhalte übernimmt der Anbieter keine Verantwortung, da es sich hierbei nicht um eigene Inhalte handelt. Die verlinkten Seiten wurden auf rechtswidrige Inhalte überprüft, zum Zeitpunkt der Verlinkung waren solche nicht erkennbar. Verantwortlich für den Inhalt der verlinkten Seiten ist deren Betreiber. Der Anbieter hat hierzu keine allgemeine Überwachungs- und Prüfungspflicht. Bei Bekanntwerden einer Rechtsverletzung wird der entsprechende Link jedoch umgehend entfernt.</p>
+
+				<h2>Legal provider identification</h2>
+	      <p>
+					<b>Hammertime Kassel gUG (haftungsbeschränkt)</b><br>
+	        <b>Franz-Ulrich-Straße 16</b><br>
+	        <b>34117 Kassel</b><br>
+	        <b>Deutschland</b>
+	      </p>
+	      <p>
+	        Managing Directors: Melania-Simona Moise, Thorben Egberts<br>
+	        Phone: +49 176 3475 4338<br>
+	        Email: hello@htks.de<br>
+	      </p>
+				<h2>Legal information about the website</h2>
+				<p>All texts, pictures and other information published here are subject to the copyright of the provider, unless third party copyrights exist. In any case, duplication, distribution or public reproduction is only permitted in the case of a revocable and non-transferable consent of the provider.	</p>
+				<p>The provider assumes no responsibility for all web contents connected by means of cross-reference (link), as these are not his own contents. The linked pages have been checked for illegal contents, at the time of linking, such contents were not recognizable. Responsible for the content of the linked pages is their operator. The provider has no general monitoring and inspection obligation in this respect. However, if an infringement becomes known, the corresponding link will be removed immediately.</p>
+			</div>
     </div>
   </section>
 </div>
