ADD multi lang (WIP part 2)

--- a/en/index.html
+++ b/en/index.html
@@ -2,5 +2,6 @@
 layout: default
 title: Maker vs. Virus
 description: Using our Maker skills against Corona, for the people
+lang: en
 ---
-{% include main-content.html lang="en" %}
+{% include main-content.html %}
