--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 layout: default
 title: Maker vs. Virus
 description: Wir nutzen unsere Maker-Skills gegen Corona
+lang: de
 ---
-{% include main-content.html lang="de" %}
+{% include main-content.html %}
