UPDATE switch default language to english

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 layout: default
 title: Maker vs. Virus
 description: Wir nutzen unsere Maker-Skills gegen Corona
-lang: de
+lang: en
 ---
 {% include main-content.html %}
