--- a/de/index.html
+++ b/de/index.html
@@ -2,6 +2,6 @@
 layout: default
 title: Maker vs. Virus
 description: Using our Maker skills against Corona, for the people
-lang: en
+lang: de
 ---
 {% include main-content.html %}
