added guide page

--- a/faq/index.html
+++ b/faq/index.html
@@ -1,5 +1,5 @@
 ---
-title: Impressum / Imprint
+title: FAQ / FAQ
 description:
 ---
 <div class="content">
@@ -11,27 +11,31 @@ description:
 
 <h3>Wie finde ich meinen nächsten Hub?</h3>
 
-<p>Suche in der Channel Liste nach einem Hub mit deiner Stadt, deiner Region oder deinem Bundesland</p>
-<p><a href="https://slack.com/intl/de-de/help/articles/218080037-Erste-Schritte-f%C3%BCr-neue-Mitglieder">Erste Schritte in Slackj</a></p>
+<p>Suche in Slack in der Channel Liste nach einem Hub mit deiner Stadt, deiner Region oder deinem Bundesland</p>
+<p><a href="https://slack.com/intl/de-de/help/articles/218080037-Erste-Schritte-f%C3%BCr-neue-Mitglieder">Erste Schritte in Slack</a></p>
 
 <p>
 <strong>Die Aufgaben eines Hubs sind</strong>
 <ul>
 	<li>Bedarf entgegennehmen</li>
-<li>Maker betreuen</li>
-<li>(optional) Annahme und Verteilung fertiger Ausrüstung</li>
-<li>(optional) Annahme und Verteilung von gespendetem Material</li>
-<li>(optional) Annahme und Verteilung von Spendengeldern</li>
+	<li>Maker betreuen</li>
+	<li>(optional) Annahme und Verteilung fertiger Ausrüstung</li>
+	<li>(optional) Annahme und Verteilung von gespendetem Material</li>
+	<li>(optional) Annahme und Verteilung von Spendengeldern</li>
 </ul>
-<h3>Was gibt es zu tun</h3>
-<p>
-vielen Dank, dass du so schnell mit uns gemeinsam starten möchtest!
-Wir unterscheiden in "Maker" wie dich und "Hubs", wo sich "Maker" lokal zusammenfinden.Eine Liste der bereitseingetragenen Hubs findest du auf www.makervsvirus.org. Alternativ schau mal hier in Slack in den Channel #register-hub (links im Menü von Slack) ob du einen Hub in deiner Nähe findest.Dann gehe bitte aktiv auf den Hub zu und melde dich.
-Es ist gut möglich, dass es für die Region Viersen noch keinen Hub gibt.Dann kannst du zumindest schon netzwerken und #register-maker durchsuchen oder auf der Homepage Leute aus deiner Nähe finden.Falls du einen HUB bilden könntest - umso besser.Danke, dass du helfen möchtest!
-Danke, dass du dabei bist!
-Bleib gesund,
 </p>
 
+<h3>Was gibt es zu tun?</h3>
+<p>
+	Vielen Dank, dass du so schnell mit uns gemeinsam starten möchtest!<br>
+	Wir unterscheiden in "Maker" wie dich und "Hubs", wo sich "Maker" lokal zusammenfinden.Eine Liste der bereits eingetragenen Hubs findest du auf makervirus.org. Alternativ schau mal hier in Slack in den Channel #register-hub (links im Menü von Slack) ob du einen Hub in deiner Nähe findest.Dann gehe bitte aktiv auf den Hub zu und melde dich.<br>
+	<br>
+	Es ist gut möglich, dass es für die Region Viersen noch keinen Hub gibt.Dann kannst du zumindest schon netzwerken und #register-maker durchsuchen oder auf der Homepage Leute aus deiner Nähe finden.<br>
+
+	Falls du einen HUB bilden könntest - umso besser. Danke, dass du helfen möchtest!<br>
+	Danke, dass du dabei bist!<br>
+	Bleib gesund,<br>
+</p>
 
 			</div>
     </div>
