--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@ description: Track and optimize your sales team in real time
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">The last sales CRM <strong>you'll ever need</strong></h1>
-		<p class="subtext editable">Track and optimize your sales team in real time.</p>
-		<div class="cta button alt"><a href="{{ site.baseurl }}/sign-up/">Get Started Free</a></div>
-		<div>
-			<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
-		</div>
+		<h1 class="editable">Winston Assembly of God</strong></h1>
+		<p class="subtext editable">Real people, serving a real God.</p>
 	</div>
 </section>
 
@@ -17,11 +13,16 @@ description: Track and optimize your sales team in real time
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can we <strong>double</strong> our sales revenue?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources. </p>
+				<h2>Wednesdays at 6:30pm</h2>
+				<ul>
+					<li>Youth - Grades 6-12</li>
+					<li>Royal Rangers - Grades k-7</li>
+					<li>Girls Club - Grades 5-7</li>
+					<li>Rainbows - Grades k-4</li>
+				</ul>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/kids.jpeg" alt="Screenshot" />
 			</div>
 		</div>
 	</section>
@@ -29,11 +30,15 @@ description: Track and optimize your sales team in real time
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can I <strong>keep track</strong> of my sales team?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
+				<h2>Sunday Service</h2>
+				<ul>
+					<li>Sunday School 9am</li>
+					<li>Main Worship 10am</li>
+					<li>Evening Service 6pm</li>
+				</ul>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/sunday-new-building.jpg" alt="Screenshot" />
 			</div>
 		</div>
 	</section>
@@ -41,29 +46,16 @@ description: Track and optimize your sales team in real time
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can I <strong>forecast</strong> the next 90 days?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
+				<h2>Celebrate Recovery</h2>
+				<ul>
+					<li>Meal 4:30pm</li>
+					<li>Large group 5:30pm</li>
+					<li>Small group 6:30pm</li>
+				</ul>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/bible-study.jpg" alt="Screenshot" />
 			</div>
 		</div>
-	</section>
-
-	<section class="testimonial">
-		<div class="container flex">
-			<div class="testimonial-block">
-				<div class="square-image"><img src="https://source.unsplash.com/6anudmpILw4/600x400" alt="Jim James" class="editable"></div>
-				<blockquote>
-					<p class="editable">Hydra has shaped the business we have today. We have a repeatable sales process and a strategy to scale our team. I recommend Hydra to any business looking to improve their sales.</p>
-					<p class="editable author">Jim James - CEO of Global Corp.</p>
-				</blockquote>
-			</div>
-		</div>
-	</section>
-
-	<section class="bottom-cta">
-		<h2 class="editable"><strong>Improve</strong> your sales process today</h2>
-		<div class="button alt"><a href="#">Get Started Free</a></div>
 	</section>
 </div>
