add new images. Use placeholder.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ description: Track and optimize your sales team in real time
 				</ul>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/kids.jpeg" alt="Screenshot" />
+				<img src="{{ site.baseurl }}/images/all-ages.jpeg" alt="Screenshot" />
 			</div>
 		</div>
 	</section>
@@ -38,7 +38,7 @@ description: Track and optimize your sales team in real time
 				</ul>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/sunday-new-building.jpg" alt="Screenshot" />
+				<img src="https://via.placeholder.com/795x500" alt="Screenshot" />
 			</div>
 		</div>
 	</section>
@@ -54,7 +54,7 @@ description: Track and optimize your sales team in real time
 				</ul>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/bible-study.jpg" alt="Screenshot" />
+				<img src="{{ site.baseurl }}/images/small-group.jpg" alt="Screenshot" />
 			</div>
 		</div>
 	</section>
