added passus about money to CoC2

--- a/codeofconduct/index.html
+++ b/codeofconduct/index.html
@@ -16,13 +16,19 @@ description:
           Mit diesem Code of Conduct regeln wir die wesentlichen Grundsätze für das Arbeiten und für Kooperationen im Rahmen von Maker Vs Virus. Diese dienen als Leitsätze für das Verhalten untereinander sowie das Auftreten nach außen. Die Hubs innerhalb von Maker Vs Virus sind grundsätzlich offen. Wer daran teilnimmt, über die Kommunikationskanäle kommuniziert und/oder anderweitig als Teil von Maker Vs Virus in Erscheinung tritt, erkennt diesen Code of Conduct als verbindlich an.
         </p>
         <p>
-        Es ist nicht unsere Aufgabe die Fehler der privatisierten Gesundheitspolitik zu beheben.<br>
-        Es geht darum zu helfen, aber wir sind nicht die Lösung für den Mangel an Masken.
+          Es ist nicht unsere Aufgabe die Fehler der privatisierten Gesundheitspolitik zu beheben.<br>
+          Es geht darum zu helfen, aber wir sind nicht die Lösung für den Mangel an Masken.
         </p>
 
+        <h3>UMGANG MIT SPENDEN</h3>
+        <p>
+          Wir möchten kein Geld verdienen. Wir möchten uns aber auch finanziell nicht ruinieren beim Erstellen der Masken. Wer sich die gedruckten Teile oder anderes Equipment zum Schutz des eigenen Lebens nicht leisten kann, bekommt dieses natürlich gestellt. Von allen anderen erwarten wir zumindest Hilfe bei der Produktion. Wer es sich leisten kann, darf gerne mehr geben um so die Produktion für andere, die es sich nicht leisten können, quer zu finanzieren.
+          Wenn mehr Spenden ankommen, als wir (Hubs, Maker, Orga) nutzen können, verteilen wir diese untereinander.
+          Geld dass nach der Krise übrig bleibt, wird einem gemeinnützigen Zweck zugeführt.
+        </p>
         <h3>VERHALTEN UNTEREINANDER</h3>
         <p>
-        Innerhalb von Maker Vs Virus wollen wir erreichen, dass sich Menschen unabhängig von Geschlecht, sexueller Orientierung, Herkunft, Glauben, Aussehen, Religion oder Alter einbringen und wohlfühlen können. Wir dulden keine sexistischen, rassistischen, homo- oder transfeindlichen, ableistischen oder anderweitig marginalisierte Gruppen diskriminierenden Äußerungen – auch nicht, wenn sie „nur als Witz“ gedacht waren.
+          Innerhalb von Maker Vs Virus wollen wir erreichen, dass sich Menschen unabhängig von Geschlecht, sexueller Orientierung, Herkunft, Glauben, Aussehen, Religion oder Alter einbringen und wohlfühlen können. Wir dulden keine sexistischen, rassistischen, homo- oder transfeindlichen, ableistischen oder anderweitig marginalisierte Gruppen diskriminierenden Äußerungen – auch nicht, wenn sie „nur als Witz“ gedacht waren.
         </p>
         <p>
         Die Hub Leads sind für die Einhaltung des Code of Conducts verantwortlich und sorgen entsprechend dafür, dass eine Umgebung geschaffen wird, die einen respektvollen Umgang miteinander ermöglicht. Interessierte sind gerne willkommen.
