added organization to coc

--- a/codeofconduct/index.html
+++ b/codeofconduct/index.html
@@ -24,7 +24,7 @@ description:
         <p>
           Wir möchten kein Geld verdienen. Wir möchten uns aber auch finanziell nicht ruinieren beim Erstellen der Masken. Wer sich die gedruckten Teile oder anderes Equipment zum Schutz des eigenen Lebens nicht leisten kann, bekommt dieses natürlich gestellt. Von allen anderen erwarten wir zumindest Hilfe bei der Produktion. Wer es sich leisten kann, darf gerne mehr geben um so die Produktion für andere, die es sich nicht leisten können, quer zu finanzieren.
           Wenn mehr Spenden ankommen, als wir (Hubs, Maker, Orga) nutzen können, verteilen wir diese untereinander.
-          Geld dass nach der Krise übrig bleibt, wird einem gemeinnützigen Zweck zugeführt.
+          Geld dass nach der Krise übrig bleibt, wird einem gemeinnützigen Zweck wie zB Ärzten ohne Grenzen oder anderen humanitären Organisation zugeführt.
         </p>
         <h3>VERHALTEN UNTEREINANDER</h3>
         <p>
