--- a/press/index.html
+++ b/press/index.html
@@ -6,15 +6,12 @@ description:
   <section>
     <div class="container flex">
       <div class="text editable">
-        <h2>Maker gegen Corona: Freiwillige überbrücken bundesweit Engpass an Schutz-Equipment</h2>
-        <p><strong>30.03.2020</strong></p>
+        <h2>Maker gegen Corona: 4.000 Freiwillige überbrücken bundesweit Engpass an Schutz-Equipment</h2>
+        <p><strong>02.04.2020</strong></p>
         <p>
-          Lieferketten sind unterbrochen, doch die Nachfrage steigt täglich:
-          Neben Atemschutzmasken und Schutzbrillen sind Faceshields (Gesichtsschilde) kaum lieferbar. In der Maker-Szene läuft mit 3D-Druckern, Lasercuttern und viel gemeinnützigem Engagement eine dezentrale Produktion für Gesichtsschilde an.</p>
+          Lieferketten sind unterbrochen, doch die Nachfrage steigt täglich: Neben Atemschutzmasken und Schutzbrillen sind Faceshields (Gesichtsschilde) kaum lieferbar. In der Maker-Szene läuft mit 3D-Druckern, Lasercuttern und viel gemeinnützigem Engagement eine dezentrale Produktion für Gesichtsschilde an.</p>
         <p>
-        Unter dem Slogan #MakerVsVirus haben sich innerhalb von 4 Tagen mehr als 2.000 Freiwillige zusammengetan.
-        Die Initiative schätzt ihre Produktionskapazität auf 6.000 Faceshields (Gesichtsschilde) deutschlandweit täglich.
-        Unterstützer für Produktion, Organisation, Material- und Geldspenden werden dringend benötigt.</p>
+        Unter dem Slogan #MakerVsVirus haben sich innerhalb von 7 Tagen 4.000 Freiwillige zusammengetan. Die Initiative schätzt ihre mögliche Produktionskapazität auf 10.000 Faceshields (Gesichtsschilde) deutschlandweit täglich. Unterstützer für Produktion, Organisation, Material- und Geldspenden werden dringend benötigt.</p>
         <p>
         Die vollständige Meldung inkl. Bildmaterial zum Download:<br>
 <a href="https://www.dropbox.com/sh/aw8rbzcj5awpdck/AACSTwZx0L6BgODV_xKcHWPQa?dl=0" title="Dropbox Pressemitteilung MakerVsVirus 30.03.2020">Dropbox</a><br>
