update title, description, and content
Remove default values in title and description. Update the Wednesday night details to be accurate.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
-title: The last sales CRM you'll ever need
-description: Track and optimize your sales team in real time
+title: Winston Assembly | A Spirit Filled Christian Church
+description: Real people, serving a real God. 
 ---
 <section class="hero">
 	<div class="text-container">
@@ -15,10 +15,11 @@ description: Track and optimize your sales team in real time
 			<div class="text editable">
 				<h2>Wednesdays at 6:30pm</h2>
 				<ul>
-					<li>Youth - Grades 6-12</li>
-					<li>Royal Rangers - Grades k-7</li>
-					<li>Girls Club - Grades 5-7</li>
-					<li>Rainbows - Grades k-4</li>
+					<li>Youth - Grades 7-12</li>
+					<li>Royal Rangers - Grades K-6</li>
+					<li>Princess Club / Girls Club - Grades K-6</li>
+					<li>Rainbows - Pre-school ages 3-5</li>
+					<li>Nursery - Ages 0-2</li>
 				</ul>
 			</div>
 			<div class="image">
