--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: Winston Assembly | A Spirit Filled Christian Church
+title: Winston Assembly - A Spirit Filled Christian Church
 description: Real people, serving a real God. 
 ---
 <section class="hero">
