--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
 title: Our team
-description: We've built an amazing team of developers, marketers, designers and sales people.
+{% comment %}description: We've built an amazing team of developers, marketers, designers and sales people.{% endcomment %}
 ---
 <p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_staff_members/" class="btn"><strong>&#9998;</strong> Manage Staff members</a></p>
 <ul class="staff">
