change title and add beliefs

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
-title: Our team
+title: Staff and Beliefs
 ---
-<p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_staff_members/" class="btn"><strong>&#9998;</strong> Manage Staff members</a></p>
+<h2>Staff</h2>
 <ul class="staff">
 	{% for person in site.staff_members %}
 		<li>
@@ -11,3 +11,7 @@ title: Our team
 		</li>
 	{% endfor %}
 </ul>
+<h2>Beliefs</h2>
+<p>We believe in <a href="https://ag.org/beliefs/statement-of-fundamental-truths" target="_blank">The 16 Fundamental Truths of the Assemblies of God</a>.  
+
+
