update with winston assembly info
Attempt #1

--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,12 @@
 ---
 title: Contact
 heading: Get in touch today
-description: We'd love to help you improve your sales.
+description: We'd love to meet you
 
 map:
-  latitude: -45.8787605
-  longitude: 170.5027976
-  address: "1 George Street, Dunedin, New Zealand"
+  latitude: 43.1176884
+  longitude: -123.4106183
+  address: "360 Darrell Ave, Winston, OR 97496"
   zoom: 13
 ---
 <div class="map" id="map"></div>
@@ -14,7 +14,7 @@ map:
 
 <div class="contact-box">
 	<form action="{{ site.baseurl }}/contact-success/" method="post" class="contact-form">
-		<input type="hidden" name="_to" value="support@example.com" />
+		<input type="hidden" name="_to" value="kendalllindley15@gmail.com" />
 		<input type="text" name="_gotcha" style="display: none;">
 
 		<label for="name">Full Name</label>
@@ -34,7 +34,7 @@ map:
 		<address><a target="_blank" href="https://www.google.com/maps/place/{{ page.map.address | url_encode }}">{{ page.map.address | replace: ", ", ", <br>" }}</a></address>
 
 		<h3 class="editable">Email</h3>
-		<p><a href="mailto:support@example.com">support@example.com</a></p>
+		<p><a href="mailto:winstonag.office@gmail.com">winstonag.office@gmail.com</a></p>
 	</div>
 </div>
 
