Attempt to integrate with Formspree

--- a/contact.html
+++ b/contact.html
@@ -13,18 +13,18 @@ map:
 
 
 <div class="contact-box">
-	<form action="{{ site.baseurl }}/contact-success/" method="post" class="contact-form">
+	<form action="https://formspree.io/xjvegwwj" method="post" class="contact-form">
 		<input type="hidden" name="_to" value="kendalllindley15@gmail.com" />
 		<input type="text" name="_gotcha" style="display: none;">
 
 		<label for="name">Full Name</label>
-		<input type="text" name="name" id="name" placeholder="Enter your name..." />
+		<input type="text" name="name" placeholder="Enter your name..." />
 
 		<label for="email">Email Address</label>
-		<input type="email" name="email" id="email" placeholder="Enter your email..." required />
+		<input type="email" name="email" placeholder="Enter your email..." required />
 
 		<label for="message">Message</label>
-		<textarea name="message" id="message" placeholder="Enter your message..."></textarea>
+		<textarea name="message" placeholder="Enter your message..."></textarea>
 
 		<input type="submit" value="Send Message" />
 	</form>
