--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
 title: Contact
-heading: Get in touch today
-description: We'd love to meet you
+heading: We'd love to meet you
+description: Get in touch today
 
 map:
   latitude: 43.1176884
