--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@ map:
 ---
 <div class="map" id="map"></div>
 
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2912.3728882647674!2d-123.41061828423155!3d43.11769229490997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54c43974f2dcc333%3A0xad9ffd74c2b5aada!2sWinston%20Assembly%20of%20God!5e0!3m2!1sen!2sus!4v1586036169721!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 
 <div class="contact-box">
 	<form action="https://formspree.io/xjvegwwj" method="post" class="contact-form">
