remove everything for a simple homepage

--- a/index.html
+++ b/index.html
@@ -4,59 +4,8 @@ description: Real people, serving a real God.
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">Winston Assembly of God</strong></h1>
-		<p class="subtext editable">Real people, serving a real God.</p>
+		<h2 class="editable">Real people, serving a real God.</h2>
+		<p class="subtext editable"> Join us at 10am on Sunday</p>
+		<div class="cta button alt"><a href="https://www.youtube.com/channel/UCQzK8bAIBWbO0aI6OZpbGIA">Subscribe on YouTube</a></div>
 	</div>
 </section>
-
-<div class="content">
-	<section>
-		<div class="container flex">
-			<div class="text editable">
-				<h2>Wednesdays at 6:30pm</h2>
-				<ul>
-					<li>Youth - Grades 7-12</li>
-					<li>Royal Rangers - Grades K-6</li>
-					<li>Princess Club / Girls Club - Grades K-6</li>
-					<li>Rainbows - Pre-school ages 3-5</li>
-					<li>Nursery - Ages 0-2</li>
-				</ul>
-			</div>
-			<div class="image">
-				<img src="{{ site.baseurl }}/images/all-ages.jpeg" alt="Screenshot" />
-			</div>
-		</div>
-	</section>
-
-	<section>
-		<div class="container flex">
-			<div class="text editable">
-				<h2>Sunday Service</h2>
-				<ul>
-					<li>Sunday School 9am</li>
-					<li>Main Worship 10am</li>
-					<li>Evening Service 6pm</li>
-				</ul>
-			</div>
-			<div class="image">
-				<img src="https://via.placeholder.com/795x500" alt="Screenshot" />
-			</div>
-		</div>
-	</section>
-
-	<section>
-		<div class="container flex">
-			<div class="text editable">
-				<h2>Celebrate Recovery</h2>
-				<ul>
-					<li>Meal 4:30pm</li>
-					<li>Large group 5:30pm</li>
-					<li>Small group 6:30pm</li>
-				</ul>
-			</div>
-			<div class="image">
-				<img src="{{ site.baseurl }}/images/small-group.jpg" alt="Screenshot" />
-			</div>
-		</div>
-	</section>
-</div>
