ADD contact Email

--- a/imprint/index.html
+++ b/imprint/index.html
@@ -6,6 +6,7 @@ description:
 	<section>
 		<div class="container flex">
 			<div class="text editable">
+				<p>Für Kontakt benutzen Sie bitte die E-Mail: hello@makervsvirus.org
 				<p>(English version below)</p>
         <h2>Gesetzliche Anbieterkennung</h2>
 	      <p>
