--- a/imprint/index.html
+++ b/imprint/index.html
@@ -6,7 +6,7 @@ description:
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<p><br>Für Kontakt benutzen Sie bitte die E-Mail: hello@makervsvirus.org</b></p><br>
+				<p><b>Für Kontakt benutzen Sie bitte die E-Mail: hello@makervsvirus.org</b></p><br>
 				<p>(English version below)</p>
         <h2>Gesetzliche Anbieterkennung</h2>
 	      <p>
