--- a/imprint/index.html
+++ b/imprint/index.html
@@ -6,7 +6,7 @@ description:
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<p><b>Für Kontakt benutzen Sie bitte die E-Mail: hello@makervsvirus.org</b></p><br>
+				<h3 style="color: red;"><b>Für die Kontaktaufnahme benutzen Sie bitte die E-Mailadressen eines <a href="https://www.makervsvirus.org/de/#need">Hubs aus Ihrer Region</a> oder für allgemeine Anfragen die E-Mail hello@makervsvirus.org</b></h3><br>
 				<p>(English version below)</p>
         <h2>Gesetzliche Anbieterkennung</h2>
 	      <p>
