--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
 title: Contact
-heading: Get in touch today
-description: We'd love to help you improve your sales.
+heading: Under Construction
+description: Come back soon!
 
 map:
   latitude: -45.8787605
@@ -9,7 +9,7 @@ map:
   address: "1 George Street, Dunedin, New Zealand"
   zoom: 13
 ---
-<div class="map" id="map"></div>
+<!-- <div class="map" id="map"></div> -->
 
 
 <div class="contact-box">
