--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 ---
-title: The last sales CRM you'll ever need
-description: Track and optimize your sales team in real time
+title: CMidas Page
+description:
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">The last sales CRM <strong>you'll ever need</strong></h1>
-		<p class="subtext editable">Track and optimize your sales team in real time.</p>
-		<div class="cta button alt"><a href="{{ site.baseurl }}/sign-up/">Get Started Free</a></div>
-		<div>
-			<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
-		</div>
+		<h1 class="editable">Under Construction</h1>
+		<p class="subtext editable">Come back soon!</p>
+		<!-- <div class="cta button alt"><a href="{{ site.baseurl }}/sign-up/">Get Started Free</a></div> -->
 	</div>
 </section>
 
@@ -17,8 +14,8 @@ description: Track and optimize your sales team in real time
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can we <strong>double</strong> our sales revenue?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources. </p>
+				<h2>Title</h2>
+				<p>Text.</p>
 			</div>
 			<div class="image">
 				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
@@ -26,7 +23,7 @@ description: Track and optimize your sales team in real time
 		</div>
 	</section>
 
-	<section>
+	<!-- <section>
 		<div class="container flex">
 			<div class="text editable">
 				<h2>How can I <strong>keep track</strong> of my sales team?</h2>
@@ -36,21 +33,9 @@ description: Track and optimize your sales team in real time
 				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
-	</section>
+	</section> -->
 
-	<section>
-		<div class="container flex">
-			<div class="text editable">
-				<h2>How can I <strong>forecast</strong> the next 90 days?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
-			</div>
-			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
-			</div>
-		</div>
-	</section>
-
-	<section class="testimonial">
+	<!-- <section class="testimonial">
 		<div class="container flex">
 			<div class="testimonial-block">
 				<div class="square-image"><img src="https://source.unsplash.com/6anudmpILw4/600x400" alt="Jim James" class="editable"></div>
@@ -60,10 +45,11 @@ description: Track and optimize your sales team in real time
 				</blockquote>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
-	<section class="bottom-cta">
+	<!-- <section class="bottom-cta">
 		<h2 class="editable"><strong>Improve</strong> your sales process today</h2>
 		<div class="button alt"><a href="#">Get Started Free</a></div>
-	</section>
+	</section> -->
+
 </div>
