--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,12 @@
 ---
 title: Contact
 heading: Under Construction
-description: Come back soon!
+description: Please come back soon!
 
 map:
-  latitude: -45.8787605
-  longitude: 170.5027976
-  address: "1 George Street, Dunedin, New Zealand"
-  zoom: 13
+  latitude: 
+  longitude: 
+  address: "94 St Martin's Ln, Covent Garden, London WC2N 4AT, United Kingdom"
 ---
 <!-- <div class="map" id="map"></div> -->
 
