--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@ description:
 <section class="hero">
 	<div class="text-container">
 		<h1 class="editable">Under Construction</h1>
-		<p class="subtext editable">Come back soon!</p>
+		<p class="subtext editable">Please come back soon!</p>
 		<!-- <div class="cta button alt"><a href="{{ site.baseurl }}/sign-up/">Get Started Free</a></div> -->
 	</div>
 </section>
 
 <div class="content">
-	<section>
+	<!-- <section>
 		<div class="container flex">
 			<div class="text editable">
 				<h2>Title</h2>
@@ -21,7 +21,7 @@ description:
 				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 	<!-- <section>
 		<div class="container flex">
