--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
-title: Under Construction
-description: Please come back soon!
+title: Meet the Leadership
+description: 
 ---
 <p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_staff_members/" class="btn"><strong>&#9998;</strong> Manage Staff members</a></p>
 <ul class="staff">
