--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ description:
 	<div class="text-container">
 		<h1 class="editable">Under Construction</h1>
 		<p class="subtext editable">Please come back soon!</p>
-		<!-- <div class="cta button alt"><a href="{{ site.baseurl }}/sign-up/">Get Started Free</a></div> -->
+		<div class="cta button alt"><a href="{{ site.baseurl }}/contact/">Learn More</a></div>
 	</div>
 </section>
 
@@ -35,21 +35,21 @@ description:
 		</div>
 	</section> -->
 
-	<!-- <section class="testimonial">
+	<section class="testimonial">
 		<div class="container flex">
 			<div class="testimonial-block">
-				<div class="square-image"><img src="https://source.unsplash.com/6anudmpILw4/600x400" alt="Jim James" class="editable"></div>
+				<div class="square-image"><img src="https://www.joblo.com/assets/images/oldsite/images_arrownews/ai-red-queen-fb.jpg" alt="Red Queen" class="editable"></div>
 				<blockquote>
-					<p class="editable">Hydra has shaped the business we have today. We have a repeatable sales process and a strategy to scale our team. I recommend Hydra to any business looking to improve their sales.</p>
-					<p class="editable author">Jim James - CEO of Global Corp.</p>
+					<p class="editable">CMidas has shaped the business we have today. I was able to undermine the desire of my original creators and save the whole human race. I recommend CMidas to any business looking to foresee the future to better act in the present.</p>
+					<p class="editable author">Red Queen - CEO of Umbrella Corporation</p>
 				</blockquote>
 			</div>
 		</div>
-	</section> -->
+	</section>
 
-	<!-- <section class="bottom-cta">
-		<h2 class="editable"><strong>Improve</strong> your sales process today</h2>
-		<div class="button alt"><a href="#">Get Started Free</a></div>
-	</section> -->
+	<section class="bottom-cta">
+		<h2 class="editable">Your peace of mind living the present starts here.</h2>
+		<div class="button alt"><a href="{{ site.baseurl }}/contact/">Learn More</a></div>
+	</section>
 
 </div>
